Added Animations On Scroll

--- a/photography.html
+++ b/photography.html
@@ -12,7 +12,6 @@
 
       <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
       <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
-      <script src="script.js"></script>
       <link rel ="stylesheet" href ="main.css">
       <script src="https://kit.fontawesome.com/0ff32d8fcb.js" crossorigin="anonymous"></script>
     </head>
@@ -133,103 +132,104 @@
              <img src="https://i.lensdump.com/i/I2JjY5.jpg" alt="Katie-1" class="img-fluid mb-4">
             </div>
             <!--Grid column-->
-            <div class="col-12 mb-4">
+            <div class="col-12 mb-4 js-scroll fade-in-bottom">
               <img src="https://i.lensdump.com/i/I2J1Rr.jpg" alt="Katie-6" class="img-fluid mb-4">
             </div>
             <!--Grid column-->
-            <div class="col-sm-6 col-12 mb-4">
+            <div class="col-sm-6 col-12 mb-4 js-scroll slide-left">
               <img src="https://i1.lensdump.com/i/I2JRpF.jpg" alt="Katie-7" class="img-fluid mb-4">
             </div>
             <!--Grid column-->
-            <div class="col-sm-6 col-12 mb-4">
+            <div class="col-sm-6 col-12 mb-4 js-scroll slide-right">
              <img src="https://i1.lensdump.com/i/I2JTF3.jpg" alt="Katie-8" class="img-fluid mb-4">
             </div>
             <!--Grid column-->
-            <div class="col-sm-4 col-12 mb-4">
+            <div class="col-sm-4 col-12 mb-4 js-scroll slide-left">
               <img src="https://i.lensdump.com/i/I2Jrx7.jpg" alt="Katie-5" class="img-fluid mb-4">
             </div>
             <!--Grid column-->
-            <div class="col-sm-4 col-12 mb-4">
+            <div class="col-sm-4 col-12 mb-4 js-scroll fade-in-bottom">
               <img src="https://i.lensdump.com/i/I2JI2z.jpg" alt="Katie-2" class="img-fluid mb-4">
             </div>
             <!--Grid column-->
-            <div class="col-sm-4 col-12 mb-4">
+            <div class="col-sm-4 col-12 mb-4 js-scroll slide-right">
               <img src="https://i1.lensdump.com/i/I2JgSb.jpg" alt="Katie-4" class="img-fluid mb-4">
             </div>
             <!--Grid column-->
-            <div class="col-sm-4 col-12 mb-4">
+            <div class="col-sm-4 col-12 mb-4 js-scroll fade-in-bottom">
               <img src="https://i1.lensdump.com/i/I2JCoq.jpg" alt="Chloe-3" class="img-fluid mb-4">
             </div>
             <!--Grid column-->
-            <div class="col-sm-4 col-12 mb-4">
+            <div class="col-sm-4 col-12 mb-4 js-scroll fade-in-bottom">
               <img src="https://i.lensdump.com/i/I2JkI0.jpg" alt="Chloe-1" class="img-fluid mb-4">
             </div>
             <!--Grid column-->
-            <div class="col-sm-4 col-12 mb-4">
+            <div class="col-sm-4 col-12 mb-4 js-scroll fade-in-bottom">
               <img src="https://i.lensdump.com/i/I2JQ8A.jpg" alt="Chloe-4" class="img-fluid mb-4">
             </div>
             <!--Grid column-->
-            <div class="col-sm-4 col-12 mb-4">
+            <div class="col-sm-4 col-12 mb-4 js-scroll fade-in-bottom">
               <img src="https://i.lensdump.com/i/I2JVJM.jpg" alt="Chloe-5" class="img-fluid mb-4">
             </div>
             <!--Grid column-->
-            <div class="col-sm-4 col-12 mb-4">
+            <div class="col-sm-4 col-12 mb-4 js-scroll fade-in-bottom">
               <img src="https://i.lensdump.com/i/I2J6BD.jpg" alt="Chloe-2" class="img-fluid mb-4">
             </div>
             <!--Grid column-->
-            <div class="col-sm-4 col-12 mb-4">
+            <div class="col-sm-4 col-12 mb-4 js-scroll fade-in-bottom">
               <img src="https://i1.lensdump.com/i/I2J9eQ.jpg" alt="Chloe-6" class="img-fluid mb-4">
             </div>
             <!--Grid column-->
-            <div class="col-sm-6 col-12 mb-4">
+            <div class="col-sm-6 col-12 mb-4 js-scroll slide-left">
               <img src="https://i1.lensdump.com/i/I2J2p9.jpg" alt="Georgie-3" class="img-fluid mb-4">
             </div>
             <!--Grid column-->
-            <div class="col-sm-6 col-12 mb-4">
+            <div class="col-sm-6 col-12 mb-4 js-scroll slide-right">
               <img src="https://i.lensdump.com/i/I2C5Sm.jpg" alt="Georgie-6" class="img-fluid mb-4">
             </div>
             <!--Grid column-->
-            <div class="col-sm-4 col-12 mb-4">
+            <div class="col-sm-4 col-12 mb-4 js-scroll fade-in-bottom">
               <img src="https://i.lensdump.com/i/I2JW0v.jpg" alt="Georgie-1" class="img-fluid mb-4">
             </div>
             <!--Grid column-->
-            <div class="col-sm-4 col-12 mb-4">
+            <div class="col-sm-4 col-12 mb-4 js-scroll fade-in-bottom">
               <img src="https://i.lensdump.com/i/I2J8F2.jpg" alt="Georgie-2" class="img-fluid mb-4">
             </div>
             <!--Grid column-->
-            <div class="col-sm-4 col-12 mb-4">
+            <div class="col-sm-4 col-12 mb-4 js-scroll fade-in-bottom">
               <img src="https://i.lensdump.com/i/I2CGxi.jpg" alt="Georgie-5" class="img-fluid mb-4">
             </div>
             <!--Grid column-->
-            <div class="col-sm-4 col-12 mb-4">
+            <div class="col-sm-4 col-12 mb-4 js-scroll fade-in-bottom">
               <img src="https://i1.lensdump.com/i/I2JKm1.jpg" alt="David-1" class="img-fluid mb-4">
             </div>
             <!--Grid column-->
-            <div class="col-sm-4 col-12 mb-4">
+            <div class="col-sm-4 col-12 mb-4 js-scroll fade-in-bottom">
               <img src="https://i1.lensdump.com/i/I2J4IH.jpg" alt="David-2" class="img-fluid mb-4">
             </div>
             <!--Grid column-->
-            <div class="col-sm-4 col-12 mb-4">
+            <div class="col-sm-4 col-12 mb-4 js-scroll fade-in-bottom">
               <img src="https://i.lensdump.com/i/I2Jpoc.jpg" alt="David-3" class="img-fluid mb-4">
             </div>
             <!--Grid column-->
-            <div class="col-sm-3 col-12 mb-4">
+            <div class="col-sm-3 col-12 mb-4 js-scroll slide-left">
               <img src="https://i1.lensdump.com/i/I2JHQZ.jpg" alt="Abbie-1" class="img-fluid mb-4">
             </div>
             <!--Grid column-->
-            <div class="col-sm-3 col-12 mb-4">
+            <div class="col-sm-3 col-12 mb-4 js-scroll fade-in-bottom">
               <img src="https://i1.lensdump.com/i/I2JO8K.jpg" alt="Abbie-2" class="img-fluid mb-4">
             </div>
             <!--Grid column-->
-            <div class="col-sm-3 col-12 mb-4">
+            <div class="col-sm-3 col-12 mb-4 js-scroll fade-in-bottom">
               <img src="https://i.lensdump.com/i/I2JleP.jpg" alt="Abbie-3" class="img-fluid mb-4">
             </div>
             <!--Grid column-->
-            <div class="col-sm-3 col-12 mb-4">
+            <div class="col-sm-3 col-12 mb-4 js-scroll slide-right">
              <img src="https://i.lensdump.com/i/I2Jzym.jpg" alt="Abbie-4" class="img-fluid mb-4">
             </div>
             <!--Grid column-->
           </div>
         </div>
+        <script src="script.js"></script>
     </body>  
 </html>
